Toggle maximize when double clicked on wide frame

BUG=865977
TEST=Covered by unit test


Change-Id: I444981ec98241d2a355d23d9711a961010a292c3
Reviewed-on: https://chromium-review.googlesource.com/1144628
Reviewed-by: Jun Mukai <mukai@chromium.org>
Commit-Queue: Mitsuru Oshima <oshima@chromium.org>
Cr-Commit-Position: refs/heads/master@{#576947}
Former-commit-id: 098f2aee1e634dae3c699b51fb5327b6787cdc6e